--- a/CMU Softball Pitch Tracking App/Resources/Info.plist
+++ b/CMU Softball Pitch Tracking App/Resources/Info.plist
@@ -6,5 +6,10 @@
 	<array>
 		<string>remote-notification</string>
 	</array>
+	<key>UISupportedInterfaceOrientations~ipad</key>
+	<array>
+		<string>UIInterfaceOrientationLandscapeLeft</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
+	</array>
 </dict>
 </plist>
